<resources>
    <string name="app_name">AjarisUploader</string>
    <string name="title_profiles">Profils</string>
    <string name="title_about">À propos</string>
    <string name="title_history">Historique</string>
    <string name="title_activity_upload">Envoi</string>
    <string name="title_activity_add_profile">Ajouter un profil</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="add_profile">Ajouter le profil</string>
    <string name="cancel_profile">Annuler</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used for add profile form -->
    <string name="hint_name">Nom du profil</string>
    <string name="hint_url">URL</string>
    <string name="hint_login">Identifiant</string>
    <string name="hint_pwd">Mot de passe</string>
    <string name="profile_adding">Ajout du profil</string>
    <string name="profile_checking">Vérification de l\'url</string>
    <string name="profile_login">Récupération du profil</string>

    <!-- Strings used for delete profile -->
    <string name="action_delete_profile">Profil supprimé</string>
    <string name="action_delete_undo">ANNULER</string>

    <!-- Strings used for about activity -->
    <string name="app_version">Ajaris UpLoader Mobile 1.0</string>
    <string name="app_description">Ajaris est un produit <a href="http://www.orkis.com">orkis.com</a></string>
    <string name="app_rate">Noter l\'application</string>

    <!-- Strings used for dialogs -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_login">Pseudo</string>
    <string name="dialog_url">URL</string>
    <string name="dialog_base">Base</string>
    <string name="dialog_import">Profil d\'import</string>
    <string name="dialog_contribution_id">Contribution</string>

    <!-- Strings used for error messages -->
    <string name="missing_fields">Veuillez renseigner tous les champs</string>
    <string name="wrong_url">URL incorrecte</string>
    <string name="wrong_login">Identifiant ou mot de passe incorrect</string>


</resources>
