<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".About">

    <TextView
        android:id="@+id/about_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50px"
        android:text="@string/app_version" />

    <TextView
        android:id="@+id/about_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50px"
        android:autoLink="web"
        android:text="@string/app_description" />

    <Button
        android:id="@+id/rate_button"
        android:onClick="rateOnPlayStore"
        android:text="@string/app_rate">
    </Button>

</GridLayout>