<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profiles">

    <fragment
        android:id="@+id/navigation_profiles"
        android:name="com.mistale.ajarisuploader.Profiles"
        android:label="@string/title_profiles"
        tools:layout="@layout/profiles_fragment" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.mistale.ajarisuploader.History"
        android:label="@string/title_history"
        tools:layout="@layout/history_fragment" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.mistale.ajarisuploader.About"
        android:label="@string/title_about"
        tools:layout="@layout/about_fragment" />
</navigation>